[EATON-604][EATON-598] FIX - Spacing Between Tile Links and 3-Column Text Only

--- a/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
@@ -3,8 +3,9 @@
 //-----------------------------------
 .text-only-3-column {
 
-  padding-top: 60px;
-  margin-bottom: 120px;
+  // EATON-598: General Spacing between components
+  margin-top: 30px;
+  margin-bottom: 110px; // Visually, 120px spacing
 
   &__heading {
     padding-bottom: 10px;
@@ -62,6 +63,7 @@
 
   &__slides {
     padding-left: 15px;
+    margin-bottom: 0;
 
     .slick-active button {
       background-color: $color__primary-blue;
@@ -71,9 +73,10 @@
 
 
 
+  //-----------------------------------
+  // 0-767px
+  //-----------------------------------
   @include media-mobile-only {
-
-    margin-bottom: 60px;
 
     &__cta-container a {
       width: 100%;
@@ -84,7 +87,7 @@
     }
 
     &__eyebrow {
-      margin-bottom: 20px; // Visually 30px spacing
+      margin-bottom: 20px; // Visually, 30px spacing
     }
 
     &__date {
@@ -94,11 +97,10 @@
   }
 
 
+  //-----------------------------------
+  // > 768px
+  //-----------------------------------
   @include media-tablet-and-up {
-
-    padding-top: 120px;
-    margin-bottom: 120px;
-
 
     &__heading {
       padding-bottom: 10px;
@@ -132,7 +134,7 @@
   //-----------------------------------
   @include media-desktop-and-up {
     &__article-copy {
-      padding: 30px 50px 15px 0;
+      padding: 30px 50px 0 0;
     }
 
     &__eyebrow {
@@ -144,4 +146,12 @@
     }
   }
 
+}
+
+
+//-----------------------------------
+// EATON-598 - Spacing between components exeptions
+//-----------------------------------
+.ttil-list + .list > .text-only-3-column {
+  margin-top: 60px;
 }
